[EXPLORER] Now that CORE-10575 is correctly fixed, delete the old and obsolete start icon. Final part of CORE-10030

svn path=/trunk/; revision=74168